--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "dev": "turbo dev",
     "build": "turbo build",
-    "lint": "turbo lint",
-    "lint:fix": "turbo lint:fix",
+    "lint": "eslint --cache --cache-location .eslintcache --debug --max-warnings 0",
+    "lint:fix": "eslint --fix --cache --cache-location .eslintcache --max-warnings 0",
     "typecheck": "turbo typecheck",
     "format": "prettier --write .",
     "check": "turbo check",
@@ -20,14 +20,22 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^6.7.3",
-    "eslint": "^9.27.0",
+    "@eslint-react/eslint-plugin": "^2.9.0",
+    "@stylistic/eslint-plugin": "^5.7.1",
+    "eslint": "^9.39.2",
     "eslint-plugin-format": "^1.3.1",
+    "eslint-plugin-lodash": "^8.0.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-storybook": "^10.2.3",
+    "eslint-plugin-testing-library": "^7.15.4",
+    "globals": "^17.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prettier": "^3.8.1",
-    "rimraf": "^6.0.1",
-    "turbo": "^2.5.4",
-    "typescript": "^5.8.3"
+    "rimraf": "^6.1.2",
+    "turbo": "^2.8.1",
+    "typescript": "^5.9.3"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,mjs,cjs}": [
