--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -5,6 +5,7 @@
     "jsx": "react-jsx",
     "rootDir": "./src",
     "declarationDir": "./dist",
+    "noEmit": false,
     "outDir": "./dist"
   },
   "include": ["src/**/*"],
