--- a/packages/foundation/tsconfig.json
+++ b/packages/foundation/tsconfig.json
@@ -4,6 +4,7 @@
     "composite": true,
     "rootDir": "./src",
     "declarationDir": "./dist",
+    "noEmit": false,
     "outDir": "./dist"
   },
   "include": ["src/**/*"],
