--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -14,14 +14,14 @@
   },
   "dependencies": {
     "@mining-sdk/core": "workspace:*",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "catalog:",
+    "react-dom": "catalog:"
   },
   "devDependencies": {
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "react-router-dom": "^7.13.0",
-    "vite": "^6.0.11"
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
+    "@vitejs/plugin-react": "catalog:",
+    "react-router-dom": "catalog:",
+    "vite": "catalog:"
   }
 }
