--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,3 +8,39 @@ packages:
 
 overrides:
   '@isaacs/brace-expansion': 5.0.1
+
+catalog:
+  '@radix-ui/react-accordion': ^1.2.2
+  '@radix-ui/react-alert-dialog': ^1.1.4
+  '@radix-ui/react-avatar': ^1.1.2
+  '@radix-ui/react-checkbox': ^1.1.3
+  '@radix-ui/react-dialog': ^1.1.4
+  '@radix-ui/react-dropdown-menu': ^2.1.4
+  '@radix-ui/react-icons': ^1.3.2
+  '@radix-ui/react-label': ^2.1.1
+  '@radix-ui/react-popover': ^1.1.4
+  '@radix-ui/react-progress': ^1.1.1
+  '@radix-ui/react-radio-group': ^1.2.2
+  '@radix-ui/react-select': ^2.1.4
+  '@radix-ui/react-separator': ^1.1.1
+  '@radix-ui/react-slider': ^1.2.2
+  '@radix-ui/react-switch': ^1.1.2
+  '@radix-ui/react-tabs': ^1.1.2
+  '@radix-ui/react-toast': ^1.2.4
+  '@radix-ui/react-tooltip': ^1.1.6
+  '@reduxjs/toolkit': ^2.5.0
+  '@testing-library/react': ^16.1.0
+  '@types/react': ^18.3.18
+  '@types/react-dom': ^18.3.5
+  '@vitejs/plugin-react': ^4.3.4
+  '@vitest/ui': ^3.0.11
+  'class-variance-authority': ^0.7.1
+  clsx: ^2.1.1
+  date-fns: ^4.1.0
+  react: ^18.3.1
+  react-day-picker: ^9.13.1
+  react-dom: ^18.3.1
+  react-redux: ^9.2.0
+  react-router-dom: ^7.13.0
+  vite: ^6.0.11
+  vitest: ^3.0.11
