--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,7 +9,8 @@
       "types": "./src/index.ts",
       "default": "./src/index.ts"
     },
-    "./styles.css": "./dist/styles.css"
+    "./styles.css": "./dist/styles.css",
+    "./styles": "./src/styles/_mixins.scss"
   },
   "scripts": {
     "build": "pnpm build:ts && pnpm build:scss",
